Prevent overflow on code blocks.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -102,6 +102,7 @@ pre {
   display: block;
   white-space: pre;
   margin: 1em 0px;
+  overflow-x: auto;
 }
 
 figure.highlight {
